src/sass/sections/meditation.scss
.meditation-section {
  overflow: hidden;
}

.wrap {
  position: relative;
  display: flex;
  flex-direction: column;
  padding-top: 10px;
}

.aside__info {
  width: 100%;
  max-width: 320px;
  margin-top: 25px;
}

.meditation-header {
  position: relative;
  display: flex;
  align-items: center;
  padding: 10px 0;

  &::before {
    position: absolute;
    top: 50%;
    left: 50%;
    z-index: -1;
    width: 100vw;
    height: 100%;
    content: '';
    background-color: $gray-light;
    transform: translate(-50%, -50%);
  }

  &__img-wrapper {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 50px;
    min-width: 50px;
    height: 50px;
    min-height: 50px;
    margin-right: 20px;
  }

  &__img {
    display: block;
    width: 100%;
    height: auto;
  }

  &__info {
    width: 100%;
    max-width: 240px;
  }

  &__title {
    line-height: 1.3;
    color: $blue-dark;
  }

  &__text {
    margin-top: 5px;
    font-size: 16px;
    line-height: 1.3;
    color: $gray;
  }
}

.meditation__list {
  display: flex;
  flex-direction: column;
  margin-top: 25px;
  overflow: hidden;
  counter-reset: count;
}

.meditation__item {
  counter-increment: count;
  &:not(:last-of-type) {
    margin-bottom: 15px;
  }
}

.meditation__text {
  width: auto;
  font-size: 14px;
  line-height: 1.5;
  color: $blue-dark;

  &::before {
    font-family: $roboto;
    content: counter(count) '.';
  }

  b {
    color: $blue;
  }
}

.card-wrapper {
  flex-grow: 1;
  width: 100%;
  margin-top: 20px;
}

.card {
  position: relative;
  display: flex;
  flex-direction: column;

  > .button-icon {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 2;
  }
}

.card-wrap {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  justify-content: center;
  width: 100%;
}

.meditation-timer-time {
  justify-content: center;
  width: 100%;
  max-width: 250px;
  height: 100px;
  padding: 0;
  margin: 0 0 25px;
  font-family: $roboto;
  font-size: 100px;
  font-weight: 300;
  line-height: 1;
  color: $blue;
  text-align: center;
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.meditation-music {
  width: 100%;

  &:not(:last-of-type) {
    margin-bottom: 30px;
  }
}

.meditation-music__title {
  display: inline-block;
  margin-bottom: 15px;
  font-size: 16px;
  color: $gray;
}

.meditation-music-form {
  display: flex;
  flex-wrap: wrap;
  margin: -4px;
}

